--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <title>An experiment woohoo!</title>
     <!--script tags should go in the header -->
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    
     <script type="text/javascript" src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 
   </head>
 
