Adding new div with text

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       </div>
     </div>
 
+  <div class="allura-font">
+      <h1>Hassan & Sana's Love Story</h1>
+      <p>Date: June 28, 2022</p>
+      <p>Location: Lahore, Pakistan</p>
+  </div>
+
   </body>
 
 </html>
