Update heading font size

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
   <div class="allura-font">
-      <h1>Hassan & Sana's Love Story</h1>
+      <h1 style="font-size: 46px">Hassan & Sana's Love Story</h1>
       <p>Date: June 28, 2022</p>
       <p>Location: Lahore, Pakistan</p>
   </div>
