Replaces 3rd party carousel with native JS image popover

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <title>An experiment woohoo!</title>
+    <title>June 28th, 2023 - Happy Anniversary!</title>
     <!--script tags should go in the header -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     
@@ -12,15 +12,14 @@
 
   <body>
     <div class="grid-container">
-      <!-- Add more grid items here -->
+      <!-- This will be populated with grid items -->
     </div>
 
     <div class="popover-overlay">
-      <div class="popover-content">
-        <div class="swiper-container">
-          <div class="swiper-wrapper"></div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
+      <div class="popover-container">
+        <div class="popover-image-container">
+          <img class="popover-image" src="" alt="">
+          <div class="popover-caption"></div>
         </div>
       </div>
     </div>
