Adds music player (with autoplay) and a new font

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       <p>Location: Lahore, Pakistan</p>
   </div>
 
+  <br>
+  <div class="lofty-font">
+    <p> Enjoy the music :) </p>
+  </div>
+
+  <div class="spotify-player">
+    <iframe src="https://open.spotify.com/embed/track/5E17LNMDov8A01xUxK8Xaf?si=a29eb499e7714f42?autoplay=true" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  </div>
   </body>
 
 </html>
