Adding messages, trying to add line breaks

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     </div>
 
   <div class="allura-font">
+      <br>
+      <br>
       <h1 style="font-size: 46px">Hassan & Sana's Love Story</h1>
       <p>Date: June 28, 2022</p>
       <p>Location: Lahore, Pakistan</p>
@@ -32,6 +34,9 @@
 
   <br>
   <div class="lofty-font">
+    <p> Click on each of the hearts to unlock a random memory from that city </p>
+    <br>
+    <br>
     <p> Enjoy the music :) </p>
   </div>
 
